Removed println and hardcoded stuff from references.conf

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -19,7 +19,7 @@ search {
   attribs = ["dn","samaccountname","mail","department","streetAddress","designation","mobile","telephoneNumber","co","postalCode","extensionAttribute","st","sn","givenName","manager","l","phsicalDeliveryOfficeName","experience","distinguishedname"]
   filter-member-of-template = "(&(objectCategory=user)(memberOf=%s))"
   filter-user-template = "(&(objectCategory=user)(distinguishedname=%s))"
-  group = "CN=UX Lab BLR (Cognizant),OU=Groups,OU=KNC,OU=Chennai,OU=India,OU=APAC,OU=Cognizant,DC=cts,DC=com"
+  group = ""
 }
 
 output-file-loc = "profiles.tsv"
