calculated experience from when a person has joined organisation, show instances refactoring to incorporate deepdive specific file output

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -16,10 +16,10 @@ ad {
 search {
   base = "dc=cts,dc=com"
   //search_attribs = []
-  attribs = ["dn","samaccountname","mail","department","streetAddress","designation","mobile","telephoneNumber","co","postalCode","extensionAttribute","st","sn","givenName","manager","l","phsicalDeliveryOfficeName","experience","distinguishedname"]
+  attribs = ["dn","samaccountname","mail","department","streetAddress","description","mobile","telephoneNumber","co","postalCode","extensionAttribute","st","sn","givenName","manager","l","phsicalDeliveryOfficeName","experience","distinguishedname","whenCreated"]
   filter-member-of-template = "(&(objectCategory=user)(memberOf=%s))"
   filter-user-template = "(&(objectCategory=user)(distinguishedname=%s))"
   group = ""
 }
 
-output-file-loc = "profiles.tsv"
+output-file-loc = "profiles-unfolded.tsv"
